fixed via flex wrap

--- a/frontend/src/pages/public/components/Footer.css
+++ b/frontend/src/pages/public/components/Footer.css
@@ -3,11 +3,12 @@
 }
 
 #footer_general {
+    height: 100%;
     background-color: rgb(23, 32, 42);
     display: flex;
     justify-content: space-evenly;
     align-items: center;
-    height: 100%;
+    flex-wrap: wrap;
 }
 
 .footer_mobile-desktop-switch {
